--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ git:
   depth: 1
 
 script:
-- echo compiling Raed Quick Signal plugin
+- echo compiling NewVirtualKeyBoard plugin
 - python -m compileall .
 - find . -type f -name "*.po" -exec msgfmt {} -o {}.mo \;
 - echo done!
